Added Spring Security, add repository layer for user entities
